View/CSS cleanup.  Also fix overlap validation from comparing against self.

--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -1094,7 +1094,6 @@ input[type="color"],
   display: inline-block;
   height: 21px;
   padding: 4px 6px;
-  margin-bottom: 10.5px;
   font-size: 15px;
   line-height: 21px;
   color: #666666;
